# Protocol-Buffers

./: CMakeLists.txt
protocol/: CMakeLists.txt  Messages.proto
src/: main.cpp
src/protobuf_parser/: DelimitedMessagesStreamParser.h  helpers.hpp
test/: CMakeLists.txt  Test_DelimitedMessagesStreamParser.cpp  Test_Helpers.cpp  run.cpp
